results page brings up artist photo

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,1 +1,8 @@
-<%=result.body %>
+<div>
+	<% result.artists.items.forEach(function(item) { %>
+		<h2>album name</h2>
+		<div class="img-container">
+     		<img src="<%= item.images[0].url %>">
+    	</div>
+	<% }) %>
+</div>
