getting top tracks info from api

--- a/views/artist.ejs
+++ b/views/artist.ejs
@@ -1,4 +1,5 @@
 <h2>Artist</h2>
 
-<h2><%=artist.body%> Artist:</h2>
+<% result.artists.items.forEach(function(item) { %>
+		<h2>album name: <%=item.name%> </h2>
  
