--- a/views/artist.ejs
+++ b/views/artist.ejs
@@ -1,5 +1,11 @@
-<h2>Artist</h2>
+<h2>Your Favorite Artist</h2>
 
-<% result.artists.items.forEach(function(item) { %>
-		<h2>album name: <%=item.name%> </h2>
- 
+<% artist.forEach(function(artist) { %>
+		<h2>Artist Name: <%=artist.name%> </h2>
+		<img src="<%=artist.image%>">
+		<p><a href="<%= artist.uri %>" class="btn btn-primary" role="button">Open Artist In Spotify</a></p>
+
+
+
+<% }) -%>
+
