--- a/views/results.ejs
+++ b/views/results.ejs
@@ -3,9 +3,11 @@
 		<h2>Artist Name: <%=item.name%> </h2>
 		<img src="<%= item.images.length > 0 ? item.images[0].url : '/images/no-image-found.jpg'%>">
 		<p><a href="<%= item.uri %>" class="btn btn-primary" role="button">Open Artist In Spotify</a></p>
-		<form method="GET" action="/artist">
-        <input hidden type="text" name="name" value="<%= item.id %>">
-        <button class="btn btn-primary" type="submit">Add to Favorite artist</button>
+		<form method="POST" action="/artist">
+        <input hidden type="text" name="uri" value="<%= item.uri %>">
+         <input hidden type="text" name="image" value="<%= item.images.length > 0 ? item.images[0].url : '/images/no-image-found.jpg'%>">
+         <input hidden type="text" name="name" value="<%= item.name %>">
+		 <button class="btn btn-primary" type="submit">Add to Favorite artist</button>
       </form>
 		<div class="img-container">
 </div>
@@ -25,12 +27,7 @@
 
 
 
-    	
 
-<form method="GET" action="/artist">
-        <input hidden type="text" name="name" value="<%= item.id %>">
-        <button class="btn btn-primary" type="submit">Add to Favorite Tracks</button>
-      </form>
 
 
 	
