--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,14 +1,14 @@
 <div>
 	<% artist.artists.items.forEach(function(item, i) { %>
 		<h2>Artist Name: <%=item.name%> </h2>
-		<img src="<%= item.images.length > 0 ? item.images[0].url : '/images/no-image-found.jpg'%>">
-		<p><a href="<%= item.uri %>" class="btn btn-primary" role="button">Open Artist In Spotify</a></p>
-		<form method="POST" action="/artist">
+			<img src="<%= item.images.length > 0 ? item.images[0].url : '/images/no-image-found.jpg'%>">
+				<p><a href="<%= item.uri %>" class="btn btn-primary" role="button">Open Artist In Spotify</a></p>
+<form method="POST" action="/artist">
         <input hidden type="text" name="uri" value="<%= item.uri %>">
-         <input hidden type="text" name="image" value="<%= item.images.length > 0 ? item.images[0].url : '/images/no-image-found.jpg'%>">
-         <input hidden type="text" name="name" value="<%= item.name %>">
-		 <button class="btn btn-primary" type="submit">Add to Favorite artist</button>
-      </form>
+         	<input hidden type="text" name="image" value="<%= item.images.length > 0 ? item.images[0].url : '/images/no-image-found.jpg'%>">
+         		<input hidden type="text" name="name" value="<%= item.name %>">
+		 			<button class="btn btn-primary" type="submit">Add to Favorite Artist</button>
+</form>
 		<div class="img-container">
 </div>
 
@@ -19,6 +19,15 @@
 		<h3>Popularity Number: <%= track.popularity %> </h3>
 		<div class="img-container">
      		<img src="<%= track.album.images[0].url %>">
+<form method="Post" action="/tracks">
+	 <input hidden type="text" name="name" value="<%= track.name %>">
+	 	 <input hidden type="text" name="popnum" value="<%= track.popularity %>">
+	 	 	<input hidden type="text" name="image" value="<%= track.album.images[0].url %>">
+<button class="btn btn-primary" type="submit">Add to Favorite Tracks</button>
+</form>
+
+
+
 </div>
 
 
