commit before test deploy code not finsihed

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,17 +3,26 @@
 <head>
   <title>Music Nerdz</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+ <!--  <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 <body>
   <nav>
     <div class="nav-wrapper">
       <a href="/" class="brand-logo right">
-        <!-- <img src="https://res.cloudinary.com/briezh/image/upload/v1545283087/cloud_wind-512_hceabd.png"> -->
-      </a>
-      <ul class="left">
-        <li><a href="/">Home</a></li>
-      </ul>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <% if(!user){ %>
+            <li><a href="/">Home</a></li>
+            <li><a href="/auth/login">Login</a></li>
+            <li><a href="/auth/signup">Signup</a></li>
+          <% } else { %>
+            <% if(user.admin) { %>
+              <li><a href="/profile/admins">Admin Page</a></li>
+            <%}%>
+            <li><a href="/profile"></a></li>
+            <li>Hello, <%= user.firstname %>!</li>
+            <li><a href="/auth/logout">Logout</a></li>
+          <% } %>
+        </ul>
     </div>
   </nav>
   <div class="container">
