working on fav artist delete

--- a/views/artist.ejs
+++ b/views/artist.ejs
@@ -1,4 +1,4 @@
-<h2>Your Favorite Artist</h2>
+<h2>Your Favorite tracks </h2>
 
 <% artist.forEach(function(artist) { %>
 		<h2>Artist Name: <%=artist.name%> </h2>
