--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,7 +17,7 @@
             <li><a href="/profile"></a></li>
             <li>Hello, <%= user.firstname %>!</li>
             <li><a href="/favs/fav-artist">Favorite Artist</a></li>
-            <li><a href="/"></a>Search For Artist</li>
+            <li><a href="/favs/fav-tracks">Favorite Tracks</a></li>
             <li><a href="/auth/logout">Logout</a></li>
           <% } %>
         </ul>
