--- a/views/tracks.ejs
+++ b/views/tracks.ejs
@@ -2,8 +2,8 @@
 
 
 <% track.forEach(function(track) { %>
+		<h3>Popularity Number: <%= tracks.popnum %></h3>
 		<h2>Single Name: <%=track.name%> </h2>
-		<h3>Popularity Number: <%= track.popularity %> </h3>
 		<div class="img-container">
 		<img src="<%= track.image %>">
 		
