--- a/views/favs/fav-tracks.ejs
+++ b/views/favs/fav-tracks.ejs
@@ -20,7 +20,7 @@
 		<h2>Single Name: <%=trackid.name%> </h2>
 		<h3>Popularity Number: <%= trackid.popularity %> </h3>
 		<div class="img-container">
-		<img src="<%= trackid.image %>">
+		<img class="responsive-img" src="<%= trackid.image %>">
 		
 
 
