--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,9 +24,7 @@
     </div>
   </nav>
   <div class="container">
-    <h1 class="header center">Whos your favortie artist</h1>
-    <div class="row">
-      <div class="col-12 center">
+   <% include partials/alerts %>
         <%- body %>
       </div>
     </div>
