--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,15 +1,16 @@
 <div>
 	<% artist.artists.items.forEach(function(item, i) { %>
 		<h2>Artist Name: <%=item.name%> </h2>
-			<img src="<%= item.images.length > 0 ? item.images[0].url : '/images/no-image-found.jpg'%>">
+			<img class="responsive-img" src="<%= item.images.length > 0 ? item.images[0].url : '/images/no-image-found.jpg'%>">
 				<p><a href="<%= item.uri %>" class="btn btn-primary" role="button">Open Artist In Spotify</a></p>
+				<div class="img-container">
 <form method="POST" action="/artist">
         <input hidden type="text" name="uri" value="<%= item.uri %>">
          	<input hidden type="text" name="image" value="<%= item.images.length > 0 ? item.images[0].url : '/images/no-image-found.jpg'%>">
          		<input hidden type="text" name="name" value="<%= item.name %>">
 		 			<button class="btn btn-primary" type="submit">Add to Favorite Artist</button>
+
 </form>
-		<div class="img-container">
 </div>
 
 
@@ -18,40 +19,17 @@
 		<h2> Top Single: <%= track.name %></h2> 
 		<h3>Popularity Number: <%= track.popularity %> </h3>
 		<div class="img-container">
-     		<img src="<%= track.album.images[0].url %>">
-<form method="Post" action="/tracks">
+     		<img  class="responsive-img" src="<%= track.album.images[0].url %>">
+<form method="POST" action="/tracks">
 	 <input hidden type="text" name="name" value="<%= track.name %>">
 	 	 <input hidden type="number" name="popnum" value="<%= track.popularity %>">
 	 	 	<input hidden type="text" name="image" value="<%= track.album.images[0].url %>">
 <button class="btn btn-primary" type="submit">Add to Favorite Tracks</button>
 </form>
-
-
-
 </div>
 
 
-    	
-
-
-
-
-
-
-
-	
-</div>
 	
 <% }) -%>
 
-
-
-
-
-
-
-
-
-
 	<% }) %>
-</div>
