--- a/views/artist.ejs
+++ b/views/artist.ejs
@@ -2,7 +2,7 @@
 
 <% artist.forEach(function(artist) { %>
 		<h2>Artist Name: <%=artist.name%> </h2>
-		<img src="<%=artist.image%>">
+		<img class="responsive-img" src="<%=artist.image%>">
 		<p><a href="<%= artist.uri %>" class="btn btn-primary" role="button">Open Artist In Spotify</a></p>
 
 
