--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
 <body>
   <nav>
     <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Home</a>
+        <a href="/" class="brand-logo">Search For Artist</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <% if(!user){ %>
             <li><a href="/auth/login">Login</a></li>
