--- a/views/favs/fav-tracks.ejs
+++ b/views/favs/fav-tracks.ejs
@@ -22,6 +22,11 @@
 			<h3>Popularity Number: <%= trackid.popularity %> </h3>
 				<div class="img-container">
 					<img class="responsive-img" src="<%= trackid.image %>">
+	<form method="POST" action="fav-tracks?_method=DELETE">
+		<input  type="hidden" name="trackId" value="<%= trackid.id %>">
+		   <button class="btn btn-primary delete" type="submit" name="Delete Artist">Delete Track</button>
+		
+     </form>		
 </div>		
 
 
